--- a/index.html
+++ b/index.html
@@ -37,71 +37,80 @@
 
         header {
             display: flex;
-            align-items: center;
             justify-content: space-between;
+            align-items: center;
             padding: 15px 5%;
-            background-color: var(--bg);
             border-bottom: 1px solid var(--header-border);
             position: sticky;
             top: 0;
+            background: var(--bg);
             z-index: 1000;
         }
 
-        .logo-area { display: flex; align-items: center; cursor: pointer; gap: 5px; }
+        .logo-area { display: flex; align-items: baseline; cursor: pointer; }
         .logo-area h1 { font-size: 24px; margin: 0; }
-        .logo-area span { color: var(--blue); font-weight: bold; }
+        .logo-area span { color: var(--blue); font-size: 16px; margin-left: 8px; font-weight: bold; }
 
-        .search-container { flex: 1; max-width: 500px; margin: 0 20px; position: relative; }
+        .search-container { flex: 1; max-width: 400px; margin: 0 20px; position: relative; }
         .search-box {
             display: flex;
             align-items: center;
             background: var(--search-bg);
-            padding: 10px 15px;
-            border-radius: 12px;
-            border: 1px solid transparent;
+            padding: 8px 15px;
+            border-radius: 20px;
+            border: 1px solid var(--header-border);
         }
         .search-box input {
             background: none; border: none; color: var(--text-main);
-            margin-left: 10px; width: 100%; outline: none;
+            margin-left: 10px; outline: none; width: 100%;
         }
 
-        .nav-actions { display: flex; gap: 12px; align-items: center; }
+        .nav-actions { display: flex; gap: 10px; }
         .btn-circle {
-            width: 40px; height: 40px; border-radius: 50%;
-            border: none; background: var(--card-bg); color: var(--text-main);
+            width: 40px; height: 40px; border-radius: 50%; border: none;
+            background: var(--card-bg); color: var(--text-main); cursor: pointer;
             display: flex; align-items: center; justify-content: center;
-            cursor: pointer; transition: 0.2s; text-decoration: none;
+            transition: 0.2s; text-decoration: none;
         }
         .btn-circle:hover { transform: scale(1.1); filter: brightness(1.2); }
 
         .container { padding: 40px 5%; }
-        .grid {
+        #games-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
             gap: 25px;
         }
 
         .game-card {
-            background: var(--card-bg); border-radius: 20px; overflow: hidden;
-            transition: 0.3s; cursor: pointer; display: flex; flex-direction: column;
-            border: 1px solid rgba(255,255,255,0.05);
+            background: var(--card-bg); border-radius: 15px; overflow: hidden;
+            transition: 0.3s; border: 1px solid transparent; cursor: pointer;
+            display: flex; flex-direction: column; height: 100%;
         }
-        .game-card:hover { transform: translateY(-8px); }
-        .game-card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-content { padding: 20px; flex: 1; display: flex; flex-direction: column; }
+        .game-card:hover { border-color: #555; transform: translateY(-5px); }
+        .game-card img { width: 100%; height: 165px; object-fit: cover; }
+
+        .card-content { padding: 18px; flex-grow: 1; display: flex; flex-direction: column; }
+        .post-date { font-size: 11px; color: var(--text-gray); margin-bottom: 5px; }
+        .game-title { font-size: 18px; margin: 0; font-weight: bold; }
+        .card-desc { font-size: 14px; color: var(--text-gray); margin: 10px 0; line-height: 1.4; flex-grow: 1; }
         
-        .post-date { font-size: 12px; color: var(--text-gray); margin-bottom: 8px; display: block; }
-        .card-desc { font-size: 14px; color: var(--text-gray); line-height: 1.5; margin: 10px 0; }
-        
-        .genre-tags { display: flex; gap: 6px; flex-wrap: wrap; margin-bottom: 15px; }
-        .tag-genre { background: rgba(30, 144, 255, 0.1); color: var(--blue); padding: 4px 10px; border-radius: 6px; font-size: 11px; }
+        .genre-tags { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 12px; }
+        .tag-genre { font-size: 10px; padding: 3px 8px; border-radius: 4px; background: #333; color: #bbb; }
+
+        .provider-tags { display: flex; align-items: center; gap: 8px; margin-bottom: 15px; }
+        .tag-provider { font-size: 11px; color: var(--blue); font-weight: bold; display: flex; align-items: center; gap: 4px; }
+        .status-online { color: #2ecc71; font-size: 11px; }
 
         .btn-download {
             background: var(--blue); color: white; padding: 12px; border-radius: 10px;
-            font-weight: bold; text-align: center; margin-top: auto; display: block;
+            text-decoration: none; font-weight: bold; text-align: center;
+            transition: 0.2s;
         }
 
-        #loading-trigger { text-align: center; padding: 50px; color: var(--text-gray); }
+        #loading-trigger { 
+            text-align: center; padding: 40px; color: var(--text-gray); 
+            font-size: 16px; width: 100%; grid-column: 1 / -1;
+        }
     </style>
 </head>
 <body>
@@ -131,10 +140,11 @@
     </header>
 
     <div class="container">
-        <div id="loading-trigger">
-            <i class="fas fa-spinner fa-spin"></i> Buscando jogos no repositório...
+        <div id="games-grid">
+            <div id="loading-trigger">
+                <i class="fas fa-spinner fa-spin"></i> Buscando jogos no repositório...
+            </div>
         </div>
-        <div class="grid" id="games-grid"></div>
     </div>
 
     <script src="js/indexlogic.js"></script>
