--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <i class="fab fa-discord" style="color: white;"></i>
             </a>
             
-            <a href="pages/suporte.html" class="btn-circle" style="background: #ff4757;">
+            <a href="pages/suport.html" class="btn-circle" style="background: #ff4757;">
                 <i class="fas fa-headset" style="color: white;"></i>
             </a>
 
