--- a/pages/suport.html
+++ b/pages/suport.html
@@ -1,1 +1,214 @@
-em produção
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suporte - Gramdie Games</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg: #121212;
+            --card-bg: #1e1e1e;
+            --text-main: #ffffff;
+            --text-gray: #888888;
+            --blue: #1e90ff;
+            --red: #ff4757;
+            --green: #2ecc71;
+            --border: #2a2a2a;
+        }
+
+        body.light-mode {
+            --bg: #ffffff;
+            --card-bg: #f9f9f9;
+            --text-main: #121212;
+            --text-gray: #666666;
+            --border: #eeeeee;
+        }
+
+        body {
+            background-color: var(--bg);
+            color: var(--text-main);
+            font-family: 'Inclusive Sans', sans-serif;
+            margin: 0;
+            line-height: 1.6;
+        }
+
+        header {
+            padding: 15px 5%;
+            border-bottom: 1px solid var(--border);
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            background: var(--bg);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        .btn-back {
+            color: var(--text-main);
+            text-decoration: none;
+            background: var(--card-bg);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.2s;
+        }
+        .btn-back:hover { background: var(--blue); color: white; }
+
+        .container { padding: 40px 5%; max-width: 1000px; margin: 0 auto; }
+
+        /* Estilo de Blocos / Mapa Mental */
+        .support-section { margin-bottom: 50px; }
+        .section-title { 
+            font-size: 22px; 
+            margin-bottom: 25px; 
+            display: flex; 
+            align-items: center; 
+            gap: 10px;
+            color: var(--blue);
+        }
+
+        .support-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .info-card {
+            background: var(--card-bg);
+            padding: 25px;
+            border-radius: 15px;
+            border: 1px solid var(--border);
+            transition: 0.3s;
+        }
+
+        .info-card h3 { margin-top: 0; font-size: 18px; display: flex; align-items: center; gap: 10px; }
+        .info-card p { font-size: 14px; color: var(--text-gray); }
+
+        /* Área de Denúncia - Texto Vermelho */
+        .denuncia-box {
+            border: 2px solid rgba(255, 71, 87, 0.3);
+            background: rgba(255, 71, 87, 0.05);
+        }
+        .denuncia-box h3 { color: var(--red); }
+        .red-highlight { color: var(--red); font-weight: bold; }
+        
+        .path-step {
+            background: #000;
+            padding: 10px;
+            border-radius: 8px;
+            display: block;
+            margin: 15px 0;
+            font-family: monospace;
+            font-size: 14px;
+        }
+
+        /* Lista de Detalhes do Site */
+        .detail-list { list-style: none; padding: 0; margin: 0; }
+        .detail-list li { 
+            padding: 10px 0; 
+            border-bottom: 1px solid var(--border);
+            font-size: 14px;
+            display: flex;
+            justify-content: space-between;
+        }
+        .detail-list li span { color: var(--text-gray); }
+
+        .btn-contact {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background: var(--blue);
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 14px;
+        }
+
+        .btn-red { background: var(--red); }
+
+    </style>
+</head>
+<body>
+
+    <header>
+        <a href="../index.html" class="btn-back"><i class="fas fa-arrow-left"></i></a>
+        <h1 style="font-size: 20px; margin: 0;">Central de Ajuda & Detalhes</h1>
+    </header>
+
+    <div class="container">
+
+        <div class="support-section">
+            <div class="section-title"><i class="fas fa-info-circle"></i> Sobre o Gramdie Games</div>
+            <div class="support-grid">
+                <div class="info-card">
+                    <h3>Funcionamento</h3>
+                    <p>O Gramdie Games é um indexador de links. Nós organizamos jogos e softwares úteis de forma limpa, sem anúncios abusivos.</p>
+                    <ul class="detail-list">
+                        <li>Versão do Site <span>1.0.4 (Beta)</span></li>
+                        <li>Banco de Dados <span>SheetDB API</span></li>
+                        <li>Atualizações <span>Diárias</span></li>
+                    </ul>
+                </div>
+                <div class="info-card">
+                    <h3>Tecnologias</h3>
+                    <p>Utilizamos tecnologias modernas para garantir que sua busca seja rápida e o consumo de dados seja baixo.</p>
+                    <ul class="detail-list">
+                        <li>Linguagem <span>HTML5 / JS ES6</span></li>
+                        <li>Ícones <span>FontAwesome 6</span></li>
+                        <li>Estética <span>Inclusive Sans</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="support-section">
+            <div class="section-title" style="color: var(--red);"><i class="fas fa-exclamation-triangle"></i> Segurança e Integridade</div>
+            <div class="info-card denuncia-box" style="width: 100%; box-sizing: border-box;">
+                <h3>Proibição de Softwares Mal Intencionados</h3>
+                <p>Nossa prioridade é a segurança da comunidade. É terminantemente proibido postar vírus ou qualquer script que prejudique o usuário.</p>
+                <p>Caso encontre algo suspeito, você deve realizar a denúncia imediatamente seguindo este fluxo exato:</p>
+                
+                <code class="path-step">
+                    Clique em <span class="red-highlight">Denunciar</span> > Selecione o Motivo > <span class="red-highlight">Software mal intencionado</span>
+                </code>
+
+                <p style="margin-bottom: 0;">O desenvolvedor do site não possui vínculo legal com os arquivos postados por terceiros, mas agimos rapidamente para remover conteúdos nocivos denunciados.</p>
+                <a href="https://discord.gg/SNbNbUq8hu" class="btn-contact btn-red">Abrir Ticket de Denúncia</a>
+            </div>
+        </div>
+
+        <div class="support-section">
+            <div class="section-title"><i class="fas fa-question-circle"></i> FAQ (Dúvidas Comuns)</div>
+            <div class="support-grid">
+                <div class="info-card">
+                    <h3>O link está fora do ar?</h3>
+                    <p>Links podem expirar nos servidores de nuvem. Use o botão de suporte para nos avisar e faremos o reupload o mais rápido possível.</p>
+                </div>
+                <div class="info-card">
+                    <h3>Como usar as Tags?</h3>
+                    <p>Na barra de pesquisa, use o símbolo <b>#</b> antes da categoria (ex: #RPG). Isso filtra instantaneamente o catálogo por gênero.</p>
+                </div>
+                <div class="info-card">
+                    <h3>Pedido de Jogos</h3>
+                    <p>Quer um jogo específico que não está aqui? Entre no nosso Discord e deixe sua sugestão no canal de pedidos.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <script>
+        // Mantém o tema sincronizado com o resto do site
+        if (localStorage.getItem('theme') === 'light') {
+            document.body.classList.add('light-mode');
+        }
+    </script>
+</body>
+</html>
